--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hockey</title>
-    <link rel="shortcut icon" href="Images/hockey.jpg" type="image/x-icon">
+    <title>Hockey's World</title>
+    <link rel="shortcut icon" href="Images/hockey1.png" type="image/x-icon">
+    <!-- daisy and tailwind cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+
     <!-- font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +25,10 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+                primary: '#FF4240',
+                hockey: '#131318',
+                normalcolor: '#424247',
+                hockey: '#131318',
               }
             }
           }
@@ -29,15 +36,75 @@
       </script>
 
 </head>
-<body>
+<body class="container mx-auto">
     <header>
-
+        <nav>
+            <div class="navbar ">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                    </div>
+                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-family">
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Pages</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                  </div>
+                  <a class="text-4xl font-extrabold font-family text-hockey">Hockey<span class="text-primary">’</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1 text-1rem font-family text-normalcolor">
+                    <li class="text-primary"><a>Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Pages</a></li>
+                    <li><a>Blog</a></li>
+                    <li><a>Contact</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end">
+                    <button class="btn hidden lg:flex btn-ghost btn-circle">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+                    </button>
+                    <a class="btn px-3 lg:px-7 bg-primary text-white text-lg font-medium ml-4">Get Ticket</a>
+                </div>
+              </div>
+        </nav>
     </header>
     <main>
+        <!-- slider area -->
+        <section class="slider mt-10">
+            <div class="carousel w-full h-96 rounded-2xl">
+                <div id="slide1" class="carousel-item relative w-full">
+                  <img src="Images/1.png" class="w-full" />
+                  <div class="absolute flex transform -translate-y-1/2 left-5 right-5 top-80 gap-3">
+                    <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
+                    <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                  </div>
+                </div> 
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img src="Images/2.jpg" class="w-full" />
+                  <div class="absolute flex transform -translate-y-1/2 left-5 right-5 top-80 gap-3">
+                    <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
+                    <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                  </div>
+                </div> 
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img src="Images/p.jpg" class="w-full" />
+                  <div class="absolute flex  transform left-8 right-5 top-80 gap-3">
+                    <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
+                    <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                </div>
+            </div> 
+        </section>
+        <!-- Professional Hockeys Club -->
+
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
