slider section is done

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
               colors: {
                 clifford: '#da373d',
                 primary: '#FF4240',
-                hockey: '#131318',
+                'hockey': '#131318',
                 normalcolor: '#424247',
-                hockey: '#131318',
               }
             }
           }
@@ -76,26 +75,44 @@
     <main>
         <!-- slider area -->
         <section class="slider mt-10">
-            <div class="carousel w-full h-96 rounded-2xl">
+            <div class="carousel w-full rounded-2xl">
                 <div id="slide1" class="carousel-item relative w-full">
-                  <img src="Images/1.png" class="w-full" />
-                  <div class="absolute flex transform -translate-y-1/2 left-5 right-5 top-80 gap-3">
-                    <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
-                    <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                  <img src="Images/1.png" class="w-full h-5/6" />
+                  <div class="absolute flex transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
+                    <div class="mt-36">
+                        <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
+                        <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                    </div>
+                    <div class="bg-hockey rounded-2xl w-3/6 h-40 text-white p-4 opacity-80 mt-12">
+                        <h1 class="font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
+                        <p class="font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
+                    </div>
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full">
-                  <img src="Images/2.jpg" class="w-full" />
-                  <div class="absolute flex transform -translate-y-1/2 left-5 right-5 top-80 gap-3">
-                    <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
-                    <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                  <img src="Images/2.jpg" class="w-full h-5/6" />
+                  <div class="absolute flex transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
+                        <div class="mt-36">
+                            <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
+                            <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                        </div>
+                        <div class="bg-hockey rounded-2xl w-3/6 h-40 text-white p-4 opacity-80 mt-12">
+                            <h1 class="font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
+                            <p class="font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
+                        </div>
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full">
-                  <img src="Images/p.jpg" class="w-full" />
-                  <div class="absolute flex  transform left-8 right-5 top-80 gap-3">
-                    <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
-                    <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                  <img src="Images/p.jpg" class="w-full h-5/6" />
+                  <div class="absolute flex  transform -translate-y-1/2 left-8 right-5 top-96 gap-3 justify-between">
+                    <div class="mt-36">
+                        <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
+                        <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                    </div>
+                    <div class="bg-hockey rounded-2xl w-3/6 h-40 text-white p-4 opacity-80 mt-12">
+                        <h1 class="font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
+                        <p class="font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
+                    </div>
                 </div>
             </div> 
         </section>
@@ -103,9 +120,6 @@
 
 
     </main>
-    <footer>
-
-    </footer>
     
 </body>
 </html>
