half website responsive is done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- daisy and tailwind cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!--icone  -->
+    <script src="https://kit.fontawesome.com/443c4537f6.js" crossorigin="anonymous"></script>
 
     <!-- font family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,8 +37,8 @@
       </script>
 
 </head>
-<body class="container mx-auto, lg:mx-auto">
-    <header>
+<body class="container mx-auto">
+    <header class="">
         <nav>
             <div class="navbar mx-auto ">
                 <div class="navbar-start">
@@ -75,97 +77,90 @@
     <main>
         <!-- slider area -->
         <section class="slider mt-10">
-            <div class="carousel sm:w-96, lg:w-full h-full rounded-2xl">
+            <div class="carousel w-96 lg:h-full lg:w-full rounded-2xl">
                 <div id="slide1" class="carousel-item relative w-full">
-                  <img src="Images/1.png" class="w-full sm:h-5/6, lg:h-5/6" />
+                  <img src="Images/1.png" class="w-full h-96 lg:h-5/6" />
                   <div class="absolute flex lg:transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
-                    <div class="sm:ml-32, lg:mt-36">
+                    <div class="ml-32 -mt-32 lg:ml-10 lg:mt-36">
                         <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
                         <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
                     </div>
-                    <div class="sm:hidden, lg:bg-hockey rounded-2xl w-3/6 h-40 text-white p-4 opacity-80 mt-12">
-                        <h1 class="font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
-                        <p class="font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
+                    <div class="hidden lg:block lg:bg-hockey rounded-2xl lg:w-3/6 lg:h-40 text-white p-4 opacity-80 mt-12">
+                        <h1 class="lg:font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
+                        <p class="lg:font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
                     </div>
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full">
-                  <img src="Images/2.jpg" class="w-full h-96 lg:h-5/6" />
+                  <img src="Images/2.jpg" class="w-full h-96 lg:h-5/6 rounded-2xl"/>
                   <div class="absolute flex lg:transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
-                        <div class="lg:mt-36">
+                        <div class="ml-32 -mt-32 lg:ml-10 lg:mt-36">
                             <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
                             <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
                         </div>
-                        <div class="sm:hidden, lg:bg-hockey rounded-2xl w-3/6 h-40 text-white p-4 opacity-80 mt-12">
-                            <h1 class="font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
-                            <p class="font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
+                        <div class="hidden lg:block lg:bg-hockey rounded-2xl lg:w-3/6 lg:h-40 text-white lg:p-4 opacity-80 lg:mt-12">
+                            <h1 class="lg:font-bold lg:text-xl lg:pt-4 font-family">Meet all the heroes from the field</h1>
+                            <p class="lg:font-normal text-base pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
                         </div>
                   </div>
                 </div> 
             <div id="slide3" class="carousel-item relative w-full">
-                  <img src="Images/p.jpg" class="w-full h-96 lg:h-5/6" />
+                  <img src="Images/p.jpg" class="w-full h-96 lg:h-5/6 rounded-2xl" />
                 <div class="absolute flex  lg:transform -translate-y-1/2 left-8 right-5 top-96 gap-3 justify-between">
-                    <div class="lg:mt-36">
+                    <div class="ml-32 -mt-32 lg:ml-10 lg:mt-36">
                         <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
                         <a href="#slide1git branch -M main
                         " class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
                     </div>
-                    <div class="sm:hidden, lg:bg-hockey rounded-2xl w-3/6 h-40 text-white p-4 opacity-80 mt-12">
-                        <h1 class="font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
-                        <p class="font-normal text-sm pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
+                    <div class="hidden lg:block lg:bg-hockey rounded-2xl w-3/6 lg:h-40 text-white p-4 opacity-80 mt-12">
+                        <h1 class="lg:font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
+                        <p class=" lg:font-normal text-sm pt-3 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p> 
                     </div>
                 </div>
-            </div> 
+            </div>
         </section>
         <!-- Progressing area -->
-        <section class="sm:w-96, lg:w-full">
-            <div class="1st">
-                <div class="text-center">
-                  <div class="lg:max-w-full">
-                    <h1 class="font-family text-4xl font-extrabold">Professional Hockeys Club</h1>
-                    <p class="pt-6 px-60 font-family text-base">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p>
-                  </div>
-                </div>
+        <section class="w-full mt-10">
+            <div class="text-center lg:px-60 mx-auto">
+              <h1 class="text-xl font-extrabold mb-2 lg:font-extrabold lg:text-4xl font-family text-hockey">Professional Hockeys Club</h1>
+              <p class="px-0 lg:text-sm">The two primary variations of hockey are field hockey and ice hockey, each with its own set of rules and equipment. In this context, I'll focus on ice hockey, which is widely celebrated for its dynamic nature.</p>
             </div>
-            <div class="lg:flex gap-10 mt-10">
-                <div class="text-center">
+            <div class=" lg:flex gap-10 mt-10">
+                <div class="text-center mt-8">
                     <div class="radial-progress text-primary rotate-90" style="--value:87;" role="progressbar"><span class="text-hockey font-family font-extrabold text-xl -rotate-90">87%</span></div>
                     <h1 class="font-family my-4 font-semibold text-xl">Prayer Facility</h1>
                     <p class="font-family text-sm">In the hockey community, legends are born through unforgettable goals, crucial assists, and moments of sheer brilliance. </p>
                 </div>
-                <div class="text-center">
+                <div class="text-center mt-8">
                     <div class="radial-progress text-[#49D293] rotate-90" style="--value:95;" role="progressbar"><span class="text-hockey font-family font-extrabold text-xl -rotate-90">95%</span></div>
                     <h1 class="font-family my-4 font-semibold text-xl">Experienced Coach</h1>
                     <p class="font-family text-sm">In the hockey community, legends are born through unforgettable goals, crucial assists, and moments of sheer brilliance. </p>
                 </div>
-                <div class="text-center">
+                <div class="text-center mt-8">
                     <div class="radial-progress text-[#FFB546] rotate-90" style="--value:90;" role="progressbar"><span class="text-hockey font-family font-extrabold text-xl -rotate-90">90%</span></div>
                     <h1 class="font-family my-4 font-semibold text-xl">Senior Player</h1>
                     <p class="font-family text-sm">In the hockey community, legends are born through unforgettable goals, crucial assists, and moments of sheer brilliance. </p>
                 </div>
-                <div class="text-center">
+                <div class="text-center mt-8">
                     <div class="radial-progress text-[#4C8DF1] rotate-90" style="--value:80;" role="progressbar"><span class="text-hockey font-family font-extrabold text-xl -rotate-90">80%</span></div>
                     <h1 class="font-family my-4 font-semibold text-xl">Training Ground</h1>
                     <p class="font-family text-sm">In the hockey community, legends are born through unforgettable goals, crucial assists, and moments of sheer brilliance. </p>
                 </div>
             </div>
         </section>
-        <!--  -->
+        <!-- program area -->
         <section>
-            <div class="1st mt-40">
-                <div class="text-center">
-                  <div class="lg:max-w-full">
-                    <h1 class="font-family text-4xl font-extrabold">Program Sections</h1>
-                    <p class="pt-6 px-60 font-family text-base">Beyond the rinks and stadiums, these heroes inspire the next generation, instilling a love for the sport and fostering a sense of pride in the hockey tradition.</p>
-                  </div>
-                </div>
+          <section class="mt-10 lg:mt-32">
+            <div class="text-center lg:px-60 mx-auto">
+              <h1 class="text-xl font-extrabold mb-2 lg:font-extrabold lg:text-4xl font-family text-hockey">Program Sections</h1>
+              <p class="px-0 lg:text-sm ">Hockey is a fast-paced and exhilarating team sport that is played on ice or a synthetic surface. It is immensely popular in regions with cold climates, such as North America, Europe, and parts of Asia. The game is known for its intense physicality, skillful play, and passionate fan base.</p>
             </div>
-            <div class="mt-16 grid grid-cols-2 gap-8 w-full h-80">
-                <div class="hero h-80 rounded-2xl" style="background-image: url(Images/2.png);">
+            <div class="grid-rows-3 mt-8 lg:mt-16 lg:grid grid-cols-2 lg:gap-8 w-full lg:h-80">
+                <div class="mb-8 hero h-80 rounded-2xl" style="background-image: url(Images/2.png);">
                     <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                     <div class="hero-content text-neutral-content mt-20 ">
                       <div class="max-w-md">
-                        <h1 class="mb-5 text-3xl font-bold font-family">Junior Program</h1>
+                        <h1 class="text-xl lg:mb-5 lg:text-3xl font-bold font-family">Junior Program</h1>
                         <p class="mb-5 font-family text-sm">Hockey, a thrilling and fast-paced sport, captivates fans around the world with its intense competition and skillful plays.</p>
                         <button class="btn bg-primary border-none text-white font-family ">Register Now!</button>
                       </div>
@@ -175,7 +170,7 @@
                     <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                     <div class="hero-content text-neutral-content mt-20 ">
                       <div class="max-w-md">
-                        <h1 class="mb-5 text-3xl font-bold font-family">Teenager Program</h1>
+                        <h1 class="text-xl lg:mb-5 lg:text-3xl font-bold font-family">Teenager Program</h1>
                         <p class="mb-5 text-sm font-family">Hockey, a thrilling and fast-paced sport, captivates fans around the world with its intense competition and skillful plays.</p>
                         <button class="btn bg-primary border-none text-white font-family ">Register Now!</button>
                       </div>
@@ -186,16 +181,52 @@
                 <div class="hero h-80 rounded-2xl" style="background-image: url(Images/4.png);">
                     <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                     <div class="hero-content text-neutral-content mt-20 ">
-                      <div class="justify-start mx-20">
-                        <h1 class="mb-5 text-3xl font-bold font-family">Professional Program</h1>
-                        <p class="mb-5 text-sm font-family mr-40">Ice hockey, one of the most popular variants, showcases the grace of skaters, the precision of puck handling, and the agility of goaltenders.</p>
+                      <div class="justify-start lg:mx-20">
+                        <h1 class="text-xl lg:mb-5 lg:text-3xl font-bold font-family">Professional Program</h1>
+                        <p class="mb-2 lg:mb-5 text-sm font-family lg:mr-40">Ice hockey, one of the most popular variants, showcases the grace of skaters, the precision of puck handling, and the agility of goaltenders.</p>
                         <button class="btn bg-primary border-none text-white font-family ">Register Now!</button>
                       </div>
                     </div>
                 </div>
             </div>
         </section>
-
+        <!-- product area -->
+        <section class="mt-10 lg:mt-32">
+            <div class="text-center lg:px-60 mx-auto">
+              <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey">Our New Products</h1>
+              <p class="px-0 lg:text-sm">Check out HockeyMonkey's extensive collection inline and ice hockey equipment. Choose from ice hockey skates, accessories, tools, & care products.</p>
+            </div>
+            <div>
+                <div class="card card-side bg-base-100 shadow-xl">
+                    <figure><img src="Images/5.png" alt="Movie"/></figure>
+                    <div class="card-body">
+                        <div class="flex">
+                            <div class="flex">
+                                <i class="fa-solid fa-star"></i>
+                                <h3>5.0</h3>
+                            </div>
+                            <div class="flex">
+                                <i class="fa-regular fa-eye"></i>
+                                <h3>20</h3>
+                            </div>
+                            <div class="flex">
+                                <i class="fa-regular fa-heart"></i>
+                                <h3>200</h3>
+                            </div>
+                        </div>
+                      <h2 class="card-title">World Cup Flags Football</h2>
+                      <p>The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                      <div class="flex">
+                        <h3>Price - $22.00</h3>
+                         <div class="flex">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <h3>Delivery Fee : Free</h3>
+                         </div>   
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
 
     </main>
     
