--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </script>
 
 </head>
-<body class="container mx-auto">
+<body class="container w-80 lg:w-full mx-auto">
     <header class="">
         <nav>
             <div class="navbar mx-auto ">
@@ -77,7 +77,7 @@
     <main>
         <!-- slider area -->
         <section class="slider mt-10">
-            <div class="carousel w-96 lg:h-full lg:w-full rounded-2xl">
+            <div class="carousel w-80 lg:h-full lg:w-full rounded-2xl">
                 <div id="slide1" class="carousel-item relative w-full">
                   <img src="Images/1.png" class="w-full h-96 lg:h-5/6" />
                   <div class="absolute flex lg:transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
@@ -192,40 +192,206 @@
         </section>
         <!-- product area -->
         <section class="mt-10 lg:mt-32">
-            <div class="text-center lg:px-60 mx-auto">
+            <div class="text-center lg:px-60 mx-auto lg:mb-20">
               <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey">Our New Products</h1>
               <p class="px-0 lg:text-sm">Check out HockeyMonkey's extensive collection inline and ice hockey equipment. Choose from ice hockey skates, accessories, tools, & care products.</p>
             </div>
-            <div>
-                <div class="card card-side bg-base-100 shadow-xl">
-                    <figure><img src="Images/5.png" alt="Movie"/></figure>
+            <!-- box area -->
+            <!-- 1 -->
+            <div class="grid grid-rows-1 lg:grid-cols-2 gap-10">
+              <div class="mt-5 lg:mt-0">
+                <div class="card lg:card-side bg-base-100 shadow-xl">
+                    <figure><img src="Images/5.png" class="w-80 lg:w-96 h-56 lg:h-40 lg:rounded-2xl " alt="Movie"/></figure>
                     <div class="card-body">
-                        <div class="flex">
-                            <div class="flex">
-                                <i class="fa-solid fa-star"></i>
+                        <div class="flex gap-3">
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-solid fa-star text-orange-400"></i>
                                 <h3>5.0</h3>
                             </div>
-                            <div class="flex">
+                            <div class="flex gap-1 items-center">
                                 <i class="fa-regular fa-eye"></i>
                                 <h3>20</h3>
                             </div>
-                            <div class="flex">
+                            <div class="flex gap-1 items-center">
                                 <i class="fa-regular fa-heart"></i>
                                 <h3>200</h3>
                             </div>
                         </div>
-                      <h2 class="card-title">World Cup Flags Football</h2>
-                      <p>The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
-                      <div class="flex">
-                        <h3>Price - $22.00</h3>
-                         <div class="flex">
+                        <h2 class="card-title text-base lg:text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                        <div class=" lg:flex gap-3">
+                          <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
+                          <div class="flex items-center gap-1">
                             <i class="fa-solid fa-cart-shopping"></i>
-                            <h3>Delivery Fee : Free</h3>
-                         </div>   
-                      </div>
+                            <h3 class="text-sm text-[rgba(19, 19, 24, 0.50);]]">Delivery Fee : Free</h3>
+                          </div>   
+                        </div>
                     </div>
+                </div>
+
+              </div>
+              <!-- 2 -->
+              <div>
+                <div class="card lg:card-side bg-base-100 shadow-xl">
+                    <figure><img src="Images/6.png" class="w-80 lg:w-96 h-56 lg:h-40 lg:rounded-2xl " alt="Movie"/></figure>
+                    <div class="card-body">
+                        <div class="flex gap-3">
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-solid fa-star text-orange-400"></i>
+                                <h3>5.0</h3>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <h3>20</h3>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <h3>200</h3>
+                            </div>
+                        </div>
+                        <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                        <div class="lg:flex gap-3">
+                          <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
+                          <div class="flex items-center gap-1">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <h3 class="text-sm text-[rgba(19, 19, 24, 0.50);]]">Delivery Fee : Free</h3>
+                          </div>   
+                        </div>
+                    </div>
+                </div>
+
+              </div>
+              <!-- 3 -->
+              <div>
+                <div class="card lg:card-side bg-base-100 shadow-xl">
+                    <figure><img src="Images/7.png"class="w-80 lg:w-96 h-56 lg:h-40 lg:rounded-2xl " alt="Movie"/></figure>
+                    <div class="card-body">
+                        <div class="flex gap-3">
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-solid fa-star text-orange-400"></i>
+                                <h3>5.0</h3>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <h3>20</h3>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <h3>200</h3>
+                            </div>
+                        </div>
+                        <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                        <div class="lg:flex gap-3">
+                          <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
+                          <div class="flex items-center gap-1">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <h3 class="text-sm text-[rgba(19, 19, 24, 0.50);]]">Delivery Fee : Free</h3>
+                          </div>   
+                        </div>
+                    </div>
+                </div>
+
+              </div>
+              <!-- 4-->
+                <div>
+                  <div class="card lg:card-side bg-base-100 shadow-xl">
+                    <figure><img src="Images/8.png"class="w-80 lg:w-96 h-56 lg:h-40 lg:rounded-2xl " alt="Movie"/></figure>
+                    <div class="card-body">
+                        <div class="flex gap-3">
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-solid fa-star text-orange-400"></i>
+                                <h3>5.0</h3>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-eye"></i>
+                                <h3>20</h3>
+                            </div>
+                            <div class="flex gap-1 items-center">
+                                <i class="fa-regular fa-heart"></i>
+                                <h3>200</h3>
+                            </div>
+                        </div>
+                        <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                        <div class="lg:flex gap-3">
+                          <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
+                          <div class="flex items-center gap-1">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <h3 class="text-sm text-[rgba(19, 19, 24, 0.50);]]">Delivery Fee : Free</h3>
+                          </div>   
+                        </div>
+                    </div>
+                </div>
+
+              </div>
+              <!-- 5 -->
+              <div>
+                <div class="card lg:card-side bg-base-100 shadow-xl">
+                  <figure><img src="Images/9.png" class="w-80 lg:w-96 h-56 lg:h-40 lg:rounded-2xl " alt="Movie"/></figure>
+                  <div class="card-body">
+                      <div class="flex gap-3">
+                          <div class="flex gap-1 items-center">
+                              <i class="fa-solid fa-star text-orange-400"></i>
+                              <h3>5.0</h3>
+                          </div>
+                          <div class="flex gap-1 items-center">
+                              <i class="fa-regular fa-eye"></i>
+                              <h3>20</h3>
+                          </div>
+                          <div class="flex gap-1 items-center">
+                              <i class="fa-regular fa-heart"></i>
+                              <h3>200</h3>
+                          </div>
+                      </div>
+                      <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                      <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                      <div class="lg:flex gap-3">
+                        <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
+                        <div class="flex items-center gap-1">
+                          <i class="fa-solid fa-cart-shopping"></i>
+                          <h3 class="text-sm text-[rgba(19, 19, 24, 0.50);]]">Delivery Fee : Free</h3>
+                        </div>   
+                      </div>
                   </div>
+              </div>
+
+              </div>
+              <!-- 6 -->
+              <div>
+                <div class="card lg:card-side bg-base-100 shadow-xl">
+                  <figure><img src="Images/10.png" class="w-80 lg:w-96 h-56 lg:h-40 lg:rounded-2xl " alt="Movie"/></figure>
+                  <div class="card-body">
+                      <div class="flex gap-3">
+                          <div class="flex gap-1 items-center">
+                              <i class="fa-solid fa-star text-orange-400"></i>
+                              <h3>5.0</h3>
+                          </div>
+                          <div class="flex gap-1 items-center">
+                              <i class="fa-regular fa-eye"></i>
+                              <h3>20</h3>
+                          </div>
+                          <div class="flex gap-1 items-center">
+                              <i class="fa-regular fa-heart"></i>
+                              <h3>200</h3>
+                          </div>
+                      </div>
+                      <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                      <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
+                      <div class="lg:flex gap-3">
+                        <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
+                        <div class="flex items-center gap-1">
+                          <i class="fa-solid fa-cart-shopping"></i>
+                          <h3 class="text-sm text-[rgba(19, 19, 24, 0.50);]]">Delivery Fee : Free</h3>
+                        </div>   
+                      </div>
+                  </div>
+                </div>
+
+              </div>
             </div>
+           
         </section>
 
     </main>
