--- a/index.html
+++ b/index.html
@@ -393,7 +393,150 @@
             </div>
            
         </section>
-
+        <!--clients question  -->
+        <section class="mt-44">
+          <div>
+            <div class="text-center lg:px-60 mx-auto lg:mb-20">
+              <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey">Clients Question</h1>
+              <p class="px-0 lg:text-sm">Hockey has a deep cultural significance in many regions, and its influence extends beyond the rink. The sport fosters a sense of community, with fans passionately supporting their favorite teams. The atmosphere in hockey arenas, especially during playoff games, is electric, creating an unforgettable experience for both players and spectators</p>
+            </div>
+          </div>
+          <!-- accordian -->
+          <div class="lg:flex">
+              <div class="lg:w-4/6 lg:mr-10">
+                <img src="Images/11.png" alt="">
+              </div>
+              <div class="-ml-3 lg:-ml-0">
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" checked="checked" /> 
+                  <div class="collapse-title text-xl font-bold font-family">
+                    Our Equipment
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="font-family text-sm">The sport fosters a sense of community, with fans passionately supporting their favorite teams. The atmosphere in hockey arenas, especially during playoff games, is electric, creating an unforgettable experience for both players and spectators.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold font-family">
+                    Hockey Training
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="font-family text-sm">The Stanley Cup, awarded annually to the NHL playoff champion, is one of the most coveted trophies in sports.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold font-family">
+                    Private Lessons
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="font-family text-sm">The sport also involves physical contact, with body checking being a legal and strategic element used to gain possession of the puck.</p>
+                  </div>
+                </div>
+                <!--  -->
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold font-family">
+                    Ski Touring
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="font-family text-sm">The objective is to score goals by shooting a rubber puck into the opponent's net. The game is divided into three periods, and the team with the most goals at the end of regulation time is declared the winner.</p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold font-family">
+                    Booking
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="font-family text-sm">One of the defining aspects of ice hockey is the speed at which it is played. Players showcase their agility, speed, and stick-handling skills as they navigate the ice, maneuvering around opponents and executing precise passes. </p>
+                  </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200">
+                  <input type="radio" name="my-accordion-3" /> 
+                  <div class="collapse-title text-xl font-bold text-hockey font-family">
+                    Pricings
+                  </div>
+                  <div class="collapse-content"> 
+                    <p class="font-family text-sm">Hockey has a deep cultural significance in many regions, and its influence extends beyond the rink. The sport fosters a sense of community, with fans passionately supporting their favorite teams. </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </section>
+        <!-- form area -->
+        <section class=" mt-20 lg:mt-44">
+            <div>
+              <div class="text-center lg:px-60 mx-auto lg:mb-20">
+                <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey">Get In Touch</h1>
+                <p class="px-0 lg:text-sm">The sport continues to evolve, with innovations in equipment, strategies, and player development, ensuring that hockey remains a thrilling and enduring part of the global sports landscape.</p>
+              </div>
+            </div>
+            <div class="lg:flex">
+              <!-- card area -->
+                <div>
+                  <div class="card lg:card-compact lg:w-96 bg-sky-100 shadow-xl p-10 mb-8">
+                    <figure><img src="Images/Group 1171275317.png" class="w-16 h-16 -ml-56" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <p class="text-[#1313184D]">Phone Number :</p>
+                      <h2 class="font-bold ">(+62) 123-321-543</h2>
+                    </div>
+                  </div>
+                  <div class="card card-compact lg:w-96 bg-pink-100 shadow-xl p-10 mb-8">
+                    <figure><img src="Images/Group 1171275318.png" class="w-16 h-16 -ml-56" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <p class="text-[#1313184D]">Email :</p>
+                      <h2 class="font-bold ">hockeys@support.com :</h2>
+                    </div>
+                  </div>
+                  <div class="card card-compact lg:w-96 bg-orange-100 shadow-xl p-10 mb-8">
+                    <figure><img src="Images/Group 1171275321.png" class="w-16 h-16 -ml-56" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <p class="text-[#1313184D]">Location : </p>
+                      <h2 class="font-bold "> 152/1 Mohakhali Wireless Gate</h2>
+                    </div>
+                  </div>
+                </div>
+                <!-- form -->
+                <div>
+                  <div class="grid lg:grid-cols-2 gap-5 lg:gap-16 lg:ml-20 h-60">
+                      <form>
+                          <label class="text-lg font-semibold" for="fname">Your Name</label><br>
+                          <input class="border-2 rounded-md border-gray-200 w-80 lg:w-96 h-10 bg-gray-100 p-2 lg:p-8" type="name" placeholder="Enter your full name">
+                      </form>
+                      <form>   
+                          <label class="text-lg font-semibold" for="fname">Your Email</label><br>
+                          <input class="border-2 rounded-md border-gray-200 w-80 lg:w-96 h-10 bg-gray-100 p-2 lg:p-8" type="name" placeholder="Enter your email">
+                      </form>
+                      <form >    
+                          <label class="text-lg font-semibold" for="fname">Subject</label><br>
+                          <input class="border-2 rounded-md border-gray-200 w-80 lg:w-96 h-10 bg-gray-100 p-2 lg:p-8" type="name" placeholder="Enter your subject">
+                      </form>
+                      <form>     
+                          <label class="text-lg font-semibold" for="fname">Phone Number</label><br>
+                          <input class="border-2 rounded-md border-gray-200 w-80 lg:w-96 h-10 bg-gray-100 p-2 lg:p-8" type="name" placeholder="Enter your phone number">
+                      </form>
+                  </div>
+                  <div class="mt-28 lg:mt-20 lg:ml-20">
+                    <form class="lg:grid-rows-1">     
+                      <label class="text-lg font-semibold " for="fname">Message</label><br>
+                      <input class="border-2 rounded-md border-gray-200 w-full h-44 lg:h-72 bg-gray-100 p-8" type="name" placeholder="Write your message">
+                  </form>
+                  <button class="lg:grid-rows-1 mt-10 lg:mt-14  w-full btn bg-primary border-none text-white h-10 font-family ">Send Message</button>
+                  </div>
+                </div>  
+            </div>
+            <div class="text-center mt-16">
+                <h2 class="font-extrabold font-family text-2xl">Social Media</h2>
+                <div class="flex gap-8 justify-center mt-4">
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-github"></i>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
