website is fully done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li><a>Contact</a></li>
                     </ul>
                   </div>
-                  <a class="text-4xl font-extrabold font-family text-hockey">Hockey<span class="text-primary">’</span>s</a>
+                  <a class="lg:text-4xl text-2xl font-extrabold font-family text-hockey">Hockey<span class="text-primary">’</span>s</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1 text-1rem font-family text-normalcolor">
@@ -69,7 +69,7 @@
                     <button class="btn hidden lg:flex btn-ghost btn-circle">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                     </button>
-                    <a class="btn px-3 lg:px-7 bg-primary text-white text-lg font-medium ml-4">Get Ticket</a>
+                    <a class="btn px-3 lg:px-7 bg-primary text-white text-lg font-sm lg:font-medium ml-4">Get Ticket</a>
                 </div>
               </div>
         </nav>
@@ -81,7 +81,7 @@
                 <div id="slide1" class="carousel-item relative w-full">
                   <img src="Images/1.png" class="w-full h-96 lg:h-5/6" />
                   <div class="absolute flex lg:transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
-                    <div class="ml-32 -mt-32 lg:ml-10 lg:mt-36">
+                    <div class="ml-24 -mt-32 lg:ml-10 lg:mt-36">
                         <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
                         <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
                     </div>
@@ -94,7 +94,7 @@
                 <div id="slide2" class="carousel-item relative w-full">
                   <img src="Images/2.jpg" class="w-full h-96 lg:h-5/6 rounded-2xl"/>
                   <div class="absolute flex lg:transform -translate-y-1/2 left-5 right-5 top-96 gap-3 justify-between">
-                        <div class="ml-32 -mt-32 lg:ml-10 lg:mt-36">
+                        <div class="ml-24 -mt-32 lg:ml-10 lg:mt-36">
                             <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
                             <a href="#slide3" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
                         </div>
@@ -107,10 +107,9 @@
             <div id="slide3" class="carousel-item relative w-full">
                   <img src="Images/p.jpg" class="w-full h-96 lg:h-5/6 rounded-2xl" />
                 <div class="absolute flex  lg:transform -translate-y-1/2 left-8 right-5 top-96 gap-3 justify-between">
-                    <div class="ml-32 -mt-32 lg:ml-10 lg:mt-36">
+                    <div class="ml-24 -mt-32 lg:ml-10 lg:mt-36">
                         <a href="#slide2" class="btn btn-circle bg-hockey hover:bg-primary text-white">❮</a> 
-                        <a href="#slide1git branch -M main
-                        " class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
+                        <a href="#slide1" class="btn btn-circle bg-hockey hover:bg-primary text-white">❯</a>
                     </div>
                     <div class="hidden lg:block lg:bg-hockey rounded-2xl w-3/6 lg:h-40 text-white p-4 opacity-80 mt-12">
                         <h1 class="lg:font-bold text-xl pt-4 font-family">Meet all the heroes from the field</h1>
@@ -118,6 +117,11 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- bonus area -->
+        <section class="lg:hidden block rounded-2xl w-full bg-hockey text-white p-2">
+          <h1 class="font-bold text-lg font-family">Meet all the heroes from the field</h1>
+          <p class="font-normal text-sm pt-2 font-family">These heroes go beyond their prowess on the ice; they embody the values of sportsmanship, leadership, and a relentless pursuit of excellence.</p>
         </section>
         <!-- Progressing area -->
         <section class="w-full mt-10">
@@ -193,7 +197,7 @@
         <!-- product area -->
         <section class="mt-10 lg:mt-32">
             <div class="text-center lg:px-60 mx-auto lg:mb-20">
-              <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey">Our New Products</h1>
+              <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey mb-10">Our New Products</h1>
               <p class="px-0 lg:text-sm">Check out HockeyMonkey's extensive collection inline and ice hockey equipment. Choose from ice hockey skates, accessories, tools, & care products.</p>
             </div>
             <!-- box area -->
@@ -249,7 +253,7 @@
                                 <h3>200</h3>
                             </div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <h2 class="card-title text-base lg:text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
                         <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
                         <div class="lg:flex gap-3">
                           <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
@@ -281,7 +285,7 @@
                                 <h3>200</h3>
                             </div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <h2 class="card-title text-base lg:text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
                         <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
                         <div class="lg:flex gap-3">
                           <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
@@ -313,7 +317,7 @@
                                 <h3>200</h3>
                             </div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                        <h2 class="card-title text-base lg:text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
                         <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
                         <div class="lg:flex gap-3">
                           <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
@@ -345,7 +349,7 @@
                               <h3>200</h3>
                           </div>
                       </div>
-                      <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                      <h2 class="card-title text-base lg:text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
                       <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
                       <div class="lg:flex gap-3">
                         <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
@@ -377,7 +381,7 @@
                               <h3>200</h3>
                           </div>
                       </div>
-                      <h2 class="card-title text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
+                      <h2 class="card-title text-base lg:text-xl font-extrabold font-family text-hockey">World Cup Flags Football</h2>
                       <p class="text-sm font-family ">The sport has produced iconic figures, celebrated for their athletic prowess and sportsmanship</p>
                       <div class="lg:flex gap-3">
                         <h3 class="text-base text-primary font-bold font-family">Price - $22.00</h3>
@@ -394,11 +398,11 @@
            
         </section>
         <!--clients question  -->
-        <section class="mt-44">
+        <section class="mt-20 lg:mt-44">
           <div>
             <div class="text-center lg:px-60 mx-auto lg:mb-20">
-              <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey">Clients Question</h1>
-              <p class="px-0 lg:text-sm">Hockey has a deep cultural significance in many regions, and its influence extends beyond the rink. The sport fosters a sense of community, with fans passionately supporting their favorite teams. The atmosphere in hockey arenas, especially during playoff games, is electric, creating an unforgettable experience for both players and spectators</p>
+              <h1 class="font-extrabold text-xl lg:text-4xl font-family text-hockey mb-8">Clients Question</h1>
+              <p class="mb-10 px-0 lg:text-sm">Hockey has a deep cultural significance in many regions, and its influence extends beyond the rink. The sport fosters a sense of community, with fans passionately supporting their favorite teams. The atmosphere in hockey arenas, especially during playoff games, is electric, creating an unforgettable experience for both players and spectators</p>
             </div>
           </div>
           <!-- accordian -->
@@ -434,7 +438,6 @@
                     <p class="font-family text-sm">The sport also involves physical contact, with body checking being a legal and strategic element used to gain possession of the puck.</p>
                   </div>
                 </div>
-                <!--  -->
                 <div class="collapse collapse-plus bg-base-200">
                   <input type="radio" name="my-accordion-3" /> 
                   <div class="collapse-title text-xl font-bold font-family">
@@ -538,6 +541,66 @@
             </div>
         </section>
     </main>
+    <!-- footer area -->
+    <footer>
+      <footer class="footer p-10 bg-hockey mt-32 text-white font-family text-center lg:text-left">
+        <aside>
+            <h1 class="font-extrabold text-2xl ml-12 lg:ml-0 font-family">Get In Touch</h1>
+            <p>In addition to its professional leagues, <br>hockey is played at various levels, from <br>youth and        collegiate levels to international <br> competitions likebrthe Winter Olympics.</p>
+            <div class="flex items-center gap-2 ml-10 lg:ml-0">
+              <i class="fa-regular fa-envelope text-primary"></i>
+              <h3>hockeys@support.com</h3>
+            </div>
+            <div class="flex items-center gap-2 ml-10 lg:ml-0">
+              <i class="fa-solid fa-phone text-primary"></i>
+              <h3>(+62) 123-321-543</h3>
+            </div>
+        </aside>
+        <div class="hidden lg:flex gap-40">
+          <nav>
+            <header class="footer-title">Company</header> <br> 
+            <a class="link link-hover">About Us</a><br> 
+            <a class="link link-hover">Leadership</a><br> 
+            <a class="link link-hover">Careers</a><br> 
+            <a class="link link-hover">News & Article</a><br> 
+            <a class="link link-hover">Legal Notice</a><br> 
+          </nav> 
+          <nav>
+            <header class="footer-title">Support</header><br>  
+            <a class="link link-hover">Help Center</a><br> 
+            <a class="link link-hover">FAQ</a><br> 
+            <a class="link link-hover">Ticket Support</a><br> 
+            <a class="link link-hover">Contact Us</a><br> 
+          </nav>
+        </div>
+ 
+        <div class="flex lg:hidden gap-4 w-full">
+          <nav>
+            <header class="footer-title">Company</header> 
+            <a class="link link-hover">About Us</a>
+            <a class="link link-hover">Leadership</a><br>
+            <a class="link link-hover">Careers</a><br> 
+            <a class="link link-hover">News & Article</a> 
+            <a class="link link-hover">Legal Notice</a>
+          </nav> 
+          <nav class="ml-8">
+            <header class="footer-title">Support</header> 
+            <a class="link link-hover">Help Center</a><br> 
+            <a class="link link-hover">FAQ</a><br> 
+            <a class="link link-hover">Ticket Support</a><br> 
+            <a class="link link-hover">Contact Us</a>
+          </nav>
+        </div>
+        <nav class="ml-20 lg:ml-0">
+          <header class="footer-title">Services</header> 
+          <a class="link link-hover">Academy</a>
+          <a class="-ml-2 link link-hover">Group Lesson</a>
+          <a class="-ml-2 link link-hover">Private Lesson</a>
+          <a class="-ml-4 link link-hover">Hockeys for kids</a>
+          <a class="-ml-4 link link-hover">Hockeys for Adult</a>
+        </nav>
+      </footer>
+    </footer>
     
 </body>
 </html>
