finally this website complete

--- a/index.html
+++ b/index.html
@@ -476,25 +476,25 @@
                 <p class="px-0 lg:text-sm">The sport continues to evolve, with innovations in equipment, strategies, and player development, ensuring that hockey remains a thrilling and enduring part of the global sports landscape.</p>
               </div>
             </div>
-            <div class="lg:flex">
+            <div class="lg:flex mt-10 lg:mt-0">
               <!-- card area -->
                 <div>
                   <div class="card lg:card-compact lg:w-96 bg-sky-100 shadow-xl p-10 mb-8">
-                    <figure><img src="Images/Group 1171275317.png" class="w-16 h-16 -ml-56" alt="Shoes" /></figure>
+                    <figure><img src="Images/Group 1171275317.png" class="w-16 h-16 -ml-32 lg:-ml-56" alt="Shoes" /></figure>
                     <div class="card-body">
                       <p class="text-[#1313184D]">Phone Number :</p>
                       <h2 class="font-bold ">(+62) 123-321-543</h2>
                     </div>
                   </div>
                   <div class="card card-compact lg:w-96 bg-pink-100 shadow-xl p-10 mb-8">
-                    <figure><img src="Images/Group 1171275318.png" class="w-16 h-16 -ml-56" alt="Shoes" /></figure>
+                    <figure><img src="Images/Group 1171275318.png" class="w-16 h-16 -ml-36 lg:-ml-56" alt="Shoes" /></figure>
                     <div class="card-body">
                       <p class="text-[#1313184D]">Email :</p>
                       <h2 class="font-bold ">hockeys@support.com :</h2>
                     </div>
                   </div>
                   <div class="card card-compact lg:w-96 bg-orange-100 shadow-xl p-10 mb-8">
-                    <figure><img src="Images/Group 1171275321.png" class="w-16 h-16 -ml-56" alt="Shoes" /></figure>
+                    <figure><img src="Images/Group 1171275321.png" class="w-16 h-16 -ml-36 lg:-ml-56" alt="Shoes" /></figure>
                     <div class="card-body">
                       <p class="text-[#1313184D]">Location : </p>
                       <h2 class="font-bold "> 152/1 Mohakhali Wireless Gate</h2>
